--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-Copyright 2014 - Team-OctOS(Octo-Kat)
-A team that truly believes in open source and community... A rarity these days.
+Team-OctOs established 2013 - Octo-Kat
+A team that truly believes in open source, freedom, and community... A rarity these days.
 
-Now, these are our special build scripts.  They build, optimize, and push to our servers.  For the most part they do you no good unless you are .... ONE OF US .... But feel free to take a look around and see how we roll.
+Now, these are our special build scripts.  They build, optimize, and push to our servers.  For the most part they do you no good unless you are .... ONE OF US .... But feel free to take a look around and see how we roll. Maybe it will help you with your projects.
 
 We like to call ourselves innovators.  Like the guy who made the pet rock, or the guy from office space who designed the game called jump to conclusions, or even the guy who invented Justin Beiber.  But really we are more like the lady who sued McDonald's for her coffee being hot or the guy from office space with the red stapler.
 
